[project]
name = "zwndng"
version = "0.1.0"
description = "Komandozeilentool zur Erzeugung von Zuwendungsbescheinigungen"
readme = "README.md"
license = "EUPL-1.2"
authors = [
    { name = "Jan Christian Grünhage", email = "jan.christian@gruenhage.xyz" },
    { name = "Adrian Nöthlich", email = "git@promasu.tech" }
]
requires-python = ">=3.13"
dependencies = [
    "babel==2.17.0",
    "dataclass-wizard[yaml]==0.35.0",
    "num2words==0.5.14",
    "pymupdf==1.25.5",
    "typer==0.16.0"
]

[project.scripts]
zwndng = "zwndng.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
